2009-05-12  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-Brother.xml, driver/Postscript-Epson.xml,
	  driver/Postscript-Gestetner.xml, driver/Postscript-HP.xml,
	  driver/Postscript-Infotec.xml,
	  driver/Postscript-KONICA_MINOLTA.xml,
	  driver/Postscript-Kyocera.xml, driver/Postscript-Lanier.xml,
	  driver/Postscript-NRG.xml, driver/Postscript-Oce.xml,
	  driver/Postscript-Oki.xml, driver/Postscript-Ricoh.xml,
	  driver/Postscript-Savin.xml, driver/Postscript-Sharp.xml,
	  driver/Postscript-Toshiba.xml, driver/Postscript2-Oce.xml,
	  driver/pxlcolor-Gestetner.xml, driver/pxlcolor-Infotec.xml,
	  driver/pxlcolor-Lanier.xml, driver/pxlcolor-NRG.xml,
	  driver/pxlcolor-Ricoh.xml, driver/pxlcolor-Savin.xml,
	  driver/pxlmono-Gestetner.xml, driver/pxlmono-Infotec.xml,
	  driver/pxlmono-Lanier.xml, driver/pxlmono-NRG.xml,
	  driver/pxlmono-Ricoh.xml, driver/pxlmono-Savin.xml: Corrected
	  references to the PPD packages, removing the asterisks in the
	  end of the masks, to avoid that packages get assigned wrongly if
	  a manufacturer name is part of another manufacturer name.

2009-05-11  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Gestetner/PXL/Gestetner-10512_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-2212_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-2712_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-3212_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-3502_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-3532_4235g_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-4502_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-4532_4245g_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-6002_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-7502_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-9002_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-CS555_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-DSc424_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-DSc428_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-DSc432_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-DSc435_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-DSc445_PXL.ppd,
	  PPD/Gestetner/PXL/Gestetner-DSc460_PXL.ppd,