@@ -49,7 +49,7 @@
   </en>
  </shortdescription>
  <packages>
-  <package scope="general">*splix*1.[0-9].[0-9]*</package>
+  <package scope="general">*splix*</package>
  </packages>
  <functionality>
   <maxresx>1200</maxresx>
@@ -111,6 +111,9 @@
    <id>printer/Samsung-CLP-510</id>
   </printer>
   <printer>
+   <id>printer/Samsung-CLP-550</id>
+  </printer>
+  <printer>
    <id>printer/Samsung-CLP-600</id>
   </printer>
   <printer>
@@ -145,6 +148,12 @@
   </printer>
   <printer>
    <id>printer/Samsung-ML-1630</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1640</id>
    <functionality>
     <monochrome />
    </functionality>
@@ -186,6 +195,12 @@
    </functionality>
   </printer>
   <printer>
+   <id>printer/Samsung-ML-2251</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
    <id>printer/Samsung-ML-2510</id>
    <functionality>
     <monochrome />
@@ -193,6 +208,12 @@
   </printer>
   <printer>
    <id>printer/Samsung-ML-2550</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-2570</id>
    <functionality>
     <monochrome />
    </functionality>
@@ -211,6 +232,18 @@
   </printer>
   <printer>
    <id>printer/Samsung-ML-3560</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-SCX-4200</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
+   <id>printer/Samsung-SCX-4500</id>
    <functionality>
     <monochrome />
    </functionality>
@@ -264,6 +297,12 @@
    </functionality>
   </printer>
   <printer>
+   <id>printer/Xerox-Phaser_3160</id>
+   <functionality>
+    <monochrome />
+   </functionality>
+  </printer>
+  <printer>
    <id>printer/Xerox-Phaser_3420</id>
    <functionality>
     <monochrome />
@@ -286,6 +325,12 @@
   </printer>
   <printer>
    <id>printer/Xerox-Phaser_6110</id>
+  </printer>
+  <printer>
+   <id>printer/Xerox-WorkCentre_3119</id>
+   <functionality>
+    <monochrome />
+   </functionality>
   </printer>
  </printers>
 </driver>
