@@ -1,339 +1,0 @@
-<driver id="driver/splix2">
- <name>splix2</name>
- <url>http://splix.ap2c.org/</url>
- <supplier>SpliX project</supplier>
- <thirdpartysupplied />
- <!--not "manufacturersupplied"-->
- <license>GPL</license>
- <licensetext>
-  <en>
-   
-   Principally, this driver is free software under the GPL, but take
-   note on the following restriction:
-
-   For some of the printers which this driver supports (Currently
-   Samsung CLP-200, CLP-300, CLP-600, CLX-216x, CLX-2170, CLX-3160,
-   Xerox Phaser 6110), it uses a JBIG software module for data
-   compression.
-
-   It is possible that certain products which can be built using the
-   JBIG software module might form inventions protected by patent
-   rights in some countries (e.g., by patents about arithmetic coding
-   algorithms owned by IBM and AT&amp;T in the USA). Provision of this
-   software by the original author and OpenPrinting does NOT include
-   any licences for any patents. In those countries where a patent
-   licence is required for certain applications of this software
-   module, you will have to obtain such a licence yourself.
-
-   The driver can be built without the JBIG module, but then it will
-   not support the above-mentioned printer models any more.
-
-   Only versions 1.1.x and newer are affected. The older versions
-   1.0.x do not use the JBIG software for all supported
-   printers.
-
-  </en>
- </licensetext>
- <freesoftware />
- <!--not "nonfreesoftware"-->
- <patents />
- <!--not "nopatents"-->
- <supportcontacts>
-  <supportcontact level="voluntary" url="http://sourceforge.net/forum/?group_id=175815">SpliX forum at SourceForge</supportcontact>
-  <!--not level="commercial"-->
- </supportcontacts>
- <shortdescription>
-  <en>
-   Driver for Samsung SPL2 (ML-1710, ...) and SPLc (CLP-500, ...) laser
-   printers
-
-   (&lt;b&gt;Development snapshot, not for daily use!&lt;/b&gt;)
-  </en>
- </shortdescription>
- <packages>
-  <package scope="general">*splix*2.0.0*</package>
- </packages>
- <functionality>
-  <maxresx>1200</maxresx>
-  <maxresy>1200</maxresy>
-  <color />
-  <!--not "monochrome"-->
-  <text>100</text>
-  <lineart>100</lineart>
-  <graphics>100</graphics>
-  <photo>80</photo>
-  <load></load>
-  <speed></speed>
- </functionality>
- <execution>
-  <cups />
-  <prototype></prototype>
- </execution>
- <comments>
-  <en>
-
-    &lt;b&gt;NOTE: This entry is for the second release candidate of
-    the upcoming SpliX 2.0.0. The packages which are currently
-    available for download on this site are for a Subversion snapshot
-    shortly after RC2 (rev 254) which fixes important bugs in the
-    RC2. It is highly recommended to update to this version. But
-    nevertheless, this version is not yet intended for daily
-    production use. It can have regressions against the current stable
-    release 1.1.1. Use this release if you want to try the new
-    generation of SpliX or if you have a printer which is not
-    supported otherwise. For the stable release &lt;a
-    href=&quot;show_driver.cgi?driver=splix&quot;&gt;go
-    here&lt;/a&gt;.&lt;/b&gt;&lt;p&gt;
-
-    SpliX is a set of CUPS printer drivers for SPL (Samsung Printer
-    Language) printers. If you have such a printer, you need to
-    download and use SpliX. Moreover you will find documentation
-    about this proprietary language.&lt;p&gt;
-
-    Note that only SPL2 (monochrome) and SPLc (color) printers are
-    currently supported! However we are looking for people who have an
-    SPL 1 printer to implement this SPL version as soon as
-    possible.&lt;p&gt;
-
-    Not all SPL2 and SPLc printers are tested with this driver. Please
-    report your experience here.&lt;p&gt;
-
-    As the PPD files are contained in the driver package we will not
-    provide PPD files here on OpenPrinting.&lt;p&gt;
-
-    This driver is a pure printer driver. The scanning functionality
-    of multi-function devices is not supported.&lt;p&gt;
-
-  </en>
- </comments>
- <printers>
-  <printer>
-   <id>printer/Dell-1100</id>
-  </printer>
-  <printer>
-   <id>printer/Dell-1110</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-200</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-300</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-500</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-510</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-550</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-600</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLP-610</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLX-2160</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLX-2170</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-CLX-3160</id>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1510</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1520</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1610</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1630</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1640</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1710</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1740</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-1750</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2010</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2150</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2250</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2251</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2510</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2550</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-2571</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-3050</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-ML-3560</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Samsung-SCX-4200</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3115</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3116</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3117</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3120</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3121</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3122</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3130</id>
-  <functionality>
-    <monochrome />
-   </functionality>
-   </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3150</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3160</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3420</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_3425</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_5500</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_6100</id>
-  </printer>
-  <printer>
-   <id>printer/Xerox-Phaser_6110</id>
-  </printer>
-  <printer>
-   <id>printer/Xerox-WorkCentre_3119</id>
-   <functionality>
-    <monochrome />
-   </functionality>
-  </printer>
- </printers>
-</driver>
