@@ -44,7 +44,7 @@
        <id>pxlcolor</id>
      </driver>
      <driver>
-       <id>splix2</id>
+       <id>splix</id>
      </driver>
    </drivers>
    <comments>
