@@ -1,3 +1,9 @@
+2009-05-13  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/splix.xml, driver/splix2.xml, printer/Samsung-CLP-550.xml:
+	  Updated "splix" driver entry and removed "splix2" driver entry
+	  to represent that SpliX 2.0.0 was released.
+
 2009-05-12  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/Postscript-Brother.xml, driver/Postscript-Epson.xml,
